@@ -57,12 +57,12 @@
 		<dependency>
 			<groupId>com.qubit.solution.fenixedu</groupId>
 			<artifactId>fenixedu-academic-core</artifactId>
-			<version>41.4.0</version>
+			<version>42.1.8</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-academic-extensions</artifactId>
-			<version>4.20.2</version>
+			<version>4.21.6</version>
 		</dependency>
                 <dependency>
                         <groupId>org.fenixedu</groupId>
